--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	margin: 0;
 }
 
+
 header{
 	width: 100%;
 	height: 100vh;
@@ -64,7 +65,7 @@ header{
 		font-size: 40px;
 		font-weight: 800;
 		letter-spacing: 1.3em;
-		align-items: center
+		align-items: cente
 			
 	}
 
@@ -98,10 +99,30 @@ header{
 	border:1px solid white;
 }
 .logo {
-	width: auto;
+	
 	text-align: center;
+	
+	
+	align-items: center
 }
 
 	.logo img {
 		height: 100px;
+		
 	}
+.sm {
+	display: flex;
+	justify-content: center;
+	margin: 40px 0;
+}
+
+	.sm a {
+		color: #f2f2f2;
+		width: 56px;
+		font-size: 22px;
+		transition: .3s linear;
+	}
+
+		.sm a:hover {
+			color: #e66767;
+		}
