--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
 	text-transform: uppercase;
 	list-style: none;
 	letter-spacing: 9px;
-	padding-left: 50px;
+	padding-left: 40px;
 }
 
 .menu_list li a{
@@ -65,7 +65,7 @@ header{
 		font-size: 40px;
 		font-weight: 800;
 		letter-spacing: 1.3em;
-		align-items: cente
+		align-items: unsafe center;
 			
 	}
 
@@ -84,7 +84,7 @@ header{
 	color:#fff;
 	font-size: 12px;
 	background-color: transparent;
-	margin-right: 20px;
+	margin-right: 70px;
 }
 
 .header_content button a{
@@ -110,19 +110,3 @@ header{
 		height: 100px;
 		
 	}
-.sm {
-	display: flex;
-	justify-content: center;
-	margin: 40px 0;
-}
-
-	.sm a {
-		color: #f2f2f2;
-		width: 56px;
-		font-size: 22px;
-		transition: .3s linear;
-	}
-
-		.sm a:hover {
-			color: #e66767;
-		}
